2024-08-31  Charlie Zender  <zender@uci.edu>

	* NCO 5.2.8-beta01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.8-beta01: No Apologies';git push
	git tag -a 5.2.8-beta01 -m 'ncremap: fix sub-SGS algorithm, sum_scl, rgn_stt=sum, chk_map dgn area_b, cnk max WARNING; ncatted/ncrename: hst_att_cat NC_STRING WARNING';git push --tags

	* NCO 5.2.8-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.8-alpha03: Swim, Rick, Swim!';git push
	git tag -a 5.2.8-alpha03 -m 'ncremap: fix sub-SGS algorithm, NC_ERANGE dgn, --sum_scl';git push --tags

	* ncremap: Yesterday's SGS fix also removed need for sub_sgs_frc_out_thr so remove it
	Verify threshold-free sub-SGS regridding handles all ELM problems from the past (see 20220615)
	Eliminates last kludge in SGS regridder!

2024-08-30  Charlie Zender  <zender@uci.edu>

	* ncremap: Stop weighting accumulation to SGS values where sgs_frc_in is missing value
	Potentially serious bug most likely to affect ELM datasets whose sgs_frc = landfrac contains missing values
	Also crops-up when applying new SGS variable (e.g., Icemask) in regions where ELM may not have valid input

	* ncremap: Further improve flag and ERANGE diagnostics

2024-08-29  Charlie Zender  <zender@uci.edu>

	* nco_put_vara(): Add diagnostics for NC_ERANGE errors

	* ncremap: Add v3 regression commands

2024-08-24  Charlie Zender  <zender@uci.edu>

	* ncclimo: Add --sum_scl option for global sum timeseries

2024-08-23  Charlie Zender  <zender@uci.edu>

	* NCO 5.2.8-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.8-alpha02: Clean Subaru';git push
	git tag -a 5.2.8-alpha02 -m 'all: NCO_MAX_CHUNK_SIZE HINT, WARNING; ncatted/ncrename: fl_fmt msg, NC_STRING; ncclimo: --rgn_stt=sum; ncks --chk_map fix area_b dgn';git push --tags

	* ncclimo: Pass flg_sum not rgn_stt to cmd_rgn. Workaround ncap2 syntax errors. Confirm BFB with old avg procedure.
